src/test/resources/invalid/03_import-without-name.fmx
<fmx:import fmx:path="/macros.ftl">
  <main second="bibo" attr1="dodo" third="cecil">
  </main>
</fmx:import>